--- a/index.html
+++ b/index.html
@@ -15,37 +15,37 @@
     <title>Frontend Mentor | 3-column preview card component</title>
   </head>
   <body>
-    <div class="preview-card">
+    <main class="preview-card" role="main">
       <div class="sedan-column">
-        <img src="images/icon-sedans.svg" alt="sedan car" />
-        <p class="big">SEDANS</p>
+        <img src="images/icon-sedans.svg" alt="" />
+        <h2 class="big">Sedans</h2>
         <p>
           Choose a sedan for its affordability and excellent fuel economy. Ideal
           for cruising in the city or on your next road trip.
         </p>
-        <button class="button sedan">Learn More</button>
+        <button class="button sedan"><a>Learn More</a></button>
       </div>
 
       <div class="suvs-column">
-        <img src="images/icon-suvs.svg" alt="suv car" />
-        <p class="big">SUVS</p>
+        <img src="images/icon-suvs.svg" alt="" />
+        <h2 class="big">Suvs</h2>
         <p>
           Take an SUV for its spacious interior, power, and versatility. Perfect
           for your next family vacation and off-road adventures.
         </p>
-        <button class="button suvs">Learn More</button>
+        <button class="button suvs"><a>Learn More</a></button>
       </div>
 
       <div class="luxury-column">
-        <img src="images/icon-luxury.svg" alt="luxury car" />
-        <p class="big">LUXURY</p>
+        <img src="images/icon-luxury.svg" alt="" />
+        <h2 class="big">Luxury</h2>
         <p>
           Cruise in the best car brands without the bloated prices. Enjoy the
           enhanced comfort of a luxury rental and arrive in style.
         </p>
-        <button class="button luxury">Learn More</button>
+        <button class="button luxury"><a>Learn More</a></button>
       </div>
-    </div>
+    </main>
 
     <!--
     <footer>
